refactor and add camera hud interface

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,14 @@
 <div class="container" id="container">
 </div>
 <div class="hud top left">
-  TL HUD
   <div>FPS: <span id="fps"></span></div>
 </div>
 <div class="hud bottom right">
-  BR HUD
+  <div>CamPos: <span id="cam_position"></span></div>
+  <div>CamRot: <span id="cam_rotation"></span></div>
+  <div>CharVel: <span id="char_velocity"></span></div>
+  <div>CharPos: <span id="char_position"></span></div>
+  <div>CharRot: <span id="char_rotation"></span></div>
 </div>
 </body>
 </html>
